# simplerag

./: .env  create_sucofholds.py  pyproject.toml  readme.md
app/config/: settings.py
app/services/: openai_client.py
app/static/css/: site.css
app/static/js/: chat.js
backend/: app.py
backend/authentication/: __init__.py
backend/chat/: chathistory.py
backend/models/: chat.py
backend/services/: search_client.py
frontend/static/css/: site.css
frontend/static/js/: chat.js
frontend/templates/: index.html
